--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Catalogo de Filmes</title>
 </head>
-<body>
+<body style>="background-color: #75e6b9;"> <!-- Cor de fundo básica -->
+
+    <!-- Texto de Apresentação -->
+     <h1>Bem-vindo ao Catálogo de Filmes</h1>
+     <p>
+        Aqui voce encontra uma seleção dos melhores filmes
+     </p>
     
 </body>
 </html>
