--- a/index.html
+++ b/index.html
@@ -10,8 +10,22 @@
     <!-- Texto de Apresentação -->
      <h1>Bem-vindo ao Catálogo de Filmes</h1>
      <p>
-        Aqui voce encontra uma seleção dos melhores filmes
+        Aqui voce encontra uma seleção dos melhores filmes de todos os tempos. Aproveite para conhecer e 
+        explorar os títulos que marcaram gerações, com suas história envolventes e atuações memoráveis.
      </p>
-    
+   
+     <!-- Tabela de Filmes -->
+      <table border="1" cellspacing="0" cellpadding="10">
+        <tr>
+            <th>Filme</th>
+            <th>Imagem</th>
+        </tr>
+        <tr>
+            <td>Filme 1</td>
+            <td><img src="imagem1.jpg" alt="Imagem do Filme 1" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 2</td>   PAREI AQUI
+        </tr>
 </body>
 </html>
