--- a/index.html
+++ b/index.html
@@ -25,7 +25,71 @@
             <td><img src="imagem1.jpg" alt="Imagem do Filme 1" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 2</td>   PAREI AQUI
+            <td>Filme 2</td>
+            <td><img src="imagem2.jpg" alt="Imagem do Filme 2" width="100"></td>
         </tr>
+        <tr>
+            <td>Filme 3</td>
+            <td><img src="imagem3.jpg" alt="Imagem do Filme 3" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 4</td>
+            <td><img src="imagem4jpg" alt="Imagem do Filme 4" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 5</td>
+            <td><img src="imagem5jpg" alt="Imagem do Filme 5" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 6</td>
+            <td><img src="imagem6jpg" alt="Imagem do Filme 6" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 7</td>
+            <td><img src="imagem7jpg" alt="Imagem do Filme 7" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 8</td>
+            <td><img src="imagem8jpg" alt="Imagem do Filme 8" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 9</td>
+            <td><img src="imagem9jpg" alt="Imagem do Filme 9" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 10</td>
+            <td><img src="imagem10jpg" alt="Imagem do Filme 10" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 11</td>
+            <td><img src="imagem11jpg" alt="Imagem do Filme 11" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 12</td>
+            <td><img src="imagem12jpg" alt="Imagem do Filme 12" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 13</td>
+            <td><img src="imagem13jpg" alt="Imagem do Filme 13" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 14</td>
+            <td><img src="imagem14jpg" alt="Imagem do Filme 14" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 15</td>
+            <td><img src="imagem15jpg" alt="Imagem do Filme 15" width="100"></td>
+        </tr>
+        <tr>
+            <td>Filme 16</td>
+            <td><img src="imagem16jpg" alt="Imagem do Filme 16" width="100"></td>
+        </tr>
+        </table>
+
+        <!-- Rodapé -->
+         <footer style="margin-top:  20px;">
+            <p>Alurafix - 2024 Todos osdireitos reservados.</p>
+         </footer>
+
 </body>
 </html>
