--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <th>Imagem</th>
         </tr>
         <tr>
-            <td>Filme 1</td>
-            <td><img src="imagem1.jpg" alt="Imagem do Filme 1" width="100"></td>
+            <td>As Branquelas</td>
+            <td><img src="asbranquelas.jpeg" alt="Imagem do Filme 1" width="100"></td>
         </tr>
         <tr>
             <td>Filme 2</td>
             <td><img src="imagem2.jpg" alt="Imagem do Filme 2" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 3</td>
-            <td><img src="imagem3.jpg" alt="Imagem do Filme 3" width="100"></td>
+            <td>Gente Grande </td>
+            <td><img src="gente grande.jpg" alt="Imagem do Filme 3" width="100"></td>
         </tr>
         <tr>
             <td>Filme 4</td>
