--- a/index.html
+++ b/index.html
@@ -25,52 +25,52 @@
             <td><img src="asbranquelas.jpeg" alt="Imagem do Filme 1" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 2</td>
-            <td><img src="imagem2.jpg" alt="Imagem do Filme 2" width="100"></td>
+            <td>Vovozona</td>
+            <td><img src="vovozona.webp" alt="Imagem do Filme 2" width="100"></td>
         </tr>
         <tr>
             <td>Gente Grande </td>
             <td><img src="gente grande.jpg" alt="Imagem do Filme 3" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 4</td>
-            <td><img src="imagem4jpg" alt="Imagem do Filme 4" width="100"></td>
+            <td>Bad Boys</td>
+            <td><img src="bad boys.jpg" alt="Imagem do Filme 4" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 5</td>
-            <td><img src="imagem5jpg" alt="Imagem do Filme 5" width="100"></td>
+            <td>Minha Mae É Uma Peça</td>
+            <td><img src="minha mae e uma peca.webp" alt="Imagem do Filme 5" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 6</td>
-            <td><img src="imagem6jpg" alt="Imagem do Filme 6" width="100"></td>
+            <td>Norbit</td>
+            <td><img src="norbit.webp" alt="Imagem do Filme 6" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 7</td>
-            <td><img src="imagem7jpg" alt="Imagem do Filme 7" width="100"></td>
+            <td>Se Beber Não Case</td>
+            <td><img src="se-beber-nao-case.jpg" alt="Imagem do Filme 7" width="100"></td>
         </tr>
         <tr>
             <td>Filme 8</td>
-            <td><img src="imagem8jpg" alt="Imagem do Filme 8" width="100"></td>
+            <td><img src="MIB.webp" alt="Imagem do Filme 8" width="100"></td>
         </tr>
         <tr>
             <td>Filme 9</td>
-            <td><img src="imagem9jpg" alt="Imagem do Filme 9" width="100"></td>
+            <td><img src="Cro.jpg" alt="Imagem do Filme 9" width="100"></td>
         </tr>
         <tr>
             <td>Filme 10</td>
-            <td><img src="imagem10jpg" alt="Imagem do Filme 10" width="100"></td>
+            <td><img src="ate que a sorte nos separe.jpg" alt="Imagem do Filme 10" width="100"></td>
         </tr>
         <tr>
             <td>Filme 11</td>
-            <td><img src="imagem11jpg" alt="Imagem do Filme 11" width="100"></td>
+            <td><img src="to d graça.webp" alt="Imagem do Filme 11" width="100"></td>
         </tr>
         <tr>
             <td>Filme 12</td>
-            <td><img src="imagem12jpg" alt="Imagem do Filme 12" width="100"></td>
+            <td><img src="Um Tio Quase Perfeito.jpeg" alt="Imagem do Filme 12" width="100"></td>
         </tr>
         <tr>
             <td>Filme 13</td>
-            <td><img src="imagem13jpg" alt="Imagem do Filme 13" width="100"></td>
+            <td><img src="um-dia-cinco-estrelas.jpg" alt="Imagem do Filme 13" width="100"></td>
         </tr>
         <tr>
             <td>Filme 14</td>
