--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
             <td><img src="se-beber-nao-case.jpg" alt="Imagem do Filme 7" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 8</td>
+            <td>MIB</td>
             <td><img src="MIB.webp" alt="Imagem do Filme 8" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 9</td>
+            <td>Cro</td>
             <td><img src="Cro.jpg" alt="Imagem do Filme 9" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 10</td>
+            <td>Ate Que A Sorte Nos Separe</td>
             <td><img src="ate que a sorte nos separe.jpg" alt="Imagem do Filme 10" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 11</td>
+            <td>To De Graça</td>
             <td><img src="to d graça.webp" alt="Imagem do Filme 11" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 12</td>
+            <td>Um Tio Quase Perfeito</td>
             <td><img src="Um Tio Quase Perfeito.jpeg" alt="Imagem do Filme 12" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 13</td>
+            <td>Um Dia Cinco Estrelas</td>
             <td><img src="um-dia-cinco-estrelas.jpg" alt="Imagem do Filme 13" width="100"></td>
         </tr>
         <tr>
