--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
      </p>
    
      <!-- Tabela de Filmes -->
-      <table border="1" cellspacing="0" cellpadding="10">
+      <table border="1" cellspacing="0" cellpadding="10" align="center" width="100">
+
         <tr>
             <th>Filme</th>
             <th>Imagem</th>
@@ -73,16 +74,16 @@
             <td><img src="um-dia-cinco-estrelas.jpg" alt="Imagem do Filme 13" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 14</td>
-            <td><img src="imagem14jpg" alt="Imagem do Filme 14" width="100"></td>
+            <td>O Diabo Veste Prada</td>
+            <td><img src="O Diabo Veste Prada.png" alt="Imagem do Filme 14" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 15</td>
-            <td><img src="imagem15jpg" alt="Imagem do Filme 15" width="100"></td>
+            <td>10 Coisa Que Odeio Em Voce</td>
+            <td><img src="10 coisas que odeio em voce.webp" alt="Imagem do Filme 15" width="100"></td>
         </tr>
         <tr>
-            <td>Filme 16</td>
-            <td><img src="imagem16jpg" alt="Imagem do Filme 16" width="100"></td>
+            <td>Esquadrão Suicida</td>
+            <td><img src="Suicide_Squad.jpg" alt="Imagem do Filme 16" width="100"></td>
         </tr>
         </table>
 
